--- a/src/Jamesnet.Foundation/Jamesnet.Foundation.csproj
+++ b/src/Jamesnet.Foundation/Jamesnet.Foundation.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,14 +6,13 @@
     <LangVersion>12</LangVersion>
     <Nullable>disable</Nullable>
   </PropertyGroup>
-
-
-  <ItemGroup>
-    <PackageReference Include="OpenSilver" Version="3.1.0" />
-  </ItemGroup>
   
   <ItemGroup>
     <Compile Remove="InjectAttribute.cs" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
