--- a/src/Jamesnet.Platform.OpenSilver/Jamesnet.Platform.OpenSilver.csproj
+++ b/src/Jamesnet.Platform.OpenSilver/Jamesnet.Platform.OpenSilver.csproj
@@ -6,6 +6,15 @@
     <EnableDefaultItems>false</EnableDefaultItems>
     <DefineSilverlight>true</DefineSilverlight>
     <OpenSilverType>7</OpenSilverType>
+    <Version>9.0.1</Version>
+    <Authors>Jaewung Lee, Yang Qu</Authors>
+    <Product>Jamesnet.Platform.OpenSilver</Product>
+    <Copyright>Copyright © 2025 JamesnetGroup</Copyright>
+    <PackageProjectUrl>https://github.com/jamesnetgroup/jamesnet.foundation</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/jamesnetgroup/jamesnet.foundation</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>jamesnet,xaml,wpf,opensilver,uno-platform,winui3,uwp</PackageTags>
+    <Description>XAML-Based Cross-Platform</Description>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,11 +22,20 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="ContentCase.cs" />
     <Compile Include="IMobileView.cs" />
     <Compile Include="OpenSilverLayer.cs" />
-    <Compile Include="Scenario.cs" />
-    <Compile Include="ScenarioContent.cs" />
+    <Compile Include="ContentSwitcher.cs" />
     <Compile Include="Scripts\DeviceInfo.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="LICENSE">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="README.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
