Update project files to version 9.1.1
- Bump version for Jamesnet.Platform.Uwp, Uno, and WinUI3 to 9.1.1.

- Update TargetPlatformVersion and MinVersion in Uwp project.

- Change build output path in Uwp.nuspec from "bin\Release" to "bin\Debug".

--- a/src/Jamesnet.Platform.UWP/Jamesnet.Platform.Uwp.nuspec
+++ b/src/Jamesnet.Platform.UWP/Jamesnet.Platform.Uwp.nuspec
@@ -2,14 +2,14 @@
 <package>
   <metadata>
     <id>Jamesnet.Platform.Uwp</id>
-    <version>9.1.0</version>
+    <version>9.1.1</version>
     <authors>Jaewung Lee, Yang Qu</authors>
     <description>XAML-Based Cross-Platform - UWP Implementation</description>
     <copyright>Copyright © 2025 JamesnetGroup</copyright>
     <tags>jamesnet,xaml,wpf,opensilver,uno-platform,winui3,uwp</tags>
     <repository type="git" url="https://github.com/jamesnetgroup/jamesnet.foundation" />
   </metadata>
-  <files>
-    <file src="bin\Release\**\*.*" target="lib\uap10.0" />
-  </files>
+<files>
+  <file src="bin\Debug\**\*.*" target="lib\uap10.0" />
+</files>
 </package>
