Add responsive UI features and update project versions
Updated project versions to 9.1.8 for consistency. Introduced `ResponsiveColumns` and `ResponsiveVisibility` for dynamic layout and visibility adjustments based on screen size in OpenSilver, WPF, and Uno platforms. Added new files for responsive features and improved event handling for WPF. Reformatted `YamlItem` constructors for consistency.

--- a/src/Jamesnet.Platform.OpenSilver/Jamesnet.Platform.OpenSilver.csproj
+++ b/src/Jamesnet.Platform.OpenSilver/Jamesnet.Platform.OpenSilver.csproj
@@ -6,7 +6,7 @@
     <EnableDefaultItems>false</EnableDefaultItems>
     <DefineSilverlight>true</DefineSilverlight>
     <OpenSilverType>7</OpenSilverType>
-    <Version>9.1.7</Version>
+    <Version>9.1.8</Version>
     <Authors>Jaewung Lee, Yang Qu</Authors>
     <Product>Jamesnet.Platform.OpenSilver</Product>
     <Copyright>Copyright © 2025 JamesnetGroup</Copyright>
@@ -27,6 +27,8 @@
     <Compile Include="IMobileView.cs" />
     <Compile Include="OpenSilverLayer.cs" />
     <Compile Include="ContentSwitcher.cs" />
+    <Compile Include="Responsive\ResponsiveColumns.cs" />
+    <Compile Include="Responsive\ResponsiveVisibility.cs" />
     <Compile Include="Scripts\DeviceInfo.cs" />
   </ItemGroup>
 
