Update version and add responsive design features
- Bump version to 9.1.9 in project files.

- Introduce new responsive design files:

  ResponsiveBorderThickness.cs, ResponsiveChild.cs,

  ResponsiveContent.cs, ResponsiveFontSize.cs,

  ResponsiveHeight.cs, ResponsiveMargin.cs,

  ResponsiveMinHeight.cs, ResponsiveVisibility.cs,

  and ResponsiveWidth.cs.

- Modify ResponsiveColumns.cs to use grid.SizeChanged

  for improved performance.

- Simplify property names in ResponsiveVisibility.cs

  from DesktopVisibility/MobileVisibility to Desktop/Mobile.

- Standardize event handling for size changes across

  new responsive classes for better UI adaptability.

--- a/src/Jamesnet.Platform.OpenSilver/Jamesnet.Platform.OpenSilver.csproj
+++ b/src/Jamesnet.Platform.OpenSilver/Jamesnet.Platform.OpenSilver.csproj
@@ -6,7 +6,7 @@
     <EnableDefaultItems>false</EnableDefaultItems>
     <DefineSilverlight>true</DefineSilverlight>
     <OpenSilverType>7</OpenSilverType>
-    <Version>9.1.8</Version>
+    <Version>9.1.9</Version>
     <Authors>Jaewung Lee, Yang Qu</Authors>
     <Product>Jamesnet.Platform.OpenSilver</Product>
     <Copyright>Copyright © 2025 JamesnetGroup</Copyright>
@@ -27,13 +27,17 @@
     <Compile Include="IMobileView.cs" />
     <Compile Include="OpenSilverLayer.cs" />
     <Compile Include="ContentSwitcher.cs" />
+    <Compile Include="Responsive\ResponsiveBorderThickness.cs" />
+    <Compile Include="Responsive\ResponsiveChild.cs" />
     <Compile Include="Responsive\ResponsiveColumns.cs" />
+    <Compile Include="Responsive\ResponsiveContent.cs" />
+    <Compile Include="Responsive\ResponsiveFontSize.cs" />
+    <Compile Include="Responsive\ResponsiveHeight.cs" />
+    <Compile Include="Responsive\ResponsiveMargin.cs" />
+    <Compile Include="Responsive\ResponsiveMinHeight.cs" />
     <Compile Include="Responsive\ResponsiveVisibility.cs" />
+    <Compile Include="Responsive\ResponsiveWidth.cs" />
     <Compile Include="Scripts\DeviceInfo.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Jamesnet.Foundation\Jamesnet.Foundation.csproj" />
   </ItemGroup>
 
   <ItemGroup>
