--- a/src/Jamesnet.Platform.OpenSilver/Jamesnet.Platform.OpenSilver.csproj
+++ b/src/Jamesnet.Platform.OpenSilver/Jamesnet.Platform.OpenSilver.csproj
@@ -6,7 +6,7 @@
     <EnableDefaultItems>false</EnableDefaultItems>
     <DefineSilverlight>true</DefineSilverlight>
     <OpenSilverType>7</OpenSilverType>
-    <Version>9.1.9</Version>
+    <Version>9.1.12</Version>
     <Authors>Jaewung Lee, Yang Qu</Authors>
     <Product>Jamesnet.Platform.OpenSilver</Product>
     <Copyright>Copyright © 2025 JamesnetGroup</Copyright>
@@ -27,6 +27,7 @@
     <Compile Include="IMobileView.cs" />
     <Compile Include="OpenSilverLayer.cs" />
     <Compile Include="ContentSwitcher.cs" />
+    <Compile Include="Responsive\ResponsiveAnimationTo.cs" />
     <Compile Include="Responsive\ResponsiveBorderThickness.cs" />
     <Compile Include="Responsive\ResponsiveChild.cs" />
     <Compile Include="Responsive\ResponsiveColumns.cs" />
@@ -44,6 +45,10 @@
     <Page Include="Themes\Generic.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Jamesnet.Foundation\Jamesnet.Foundation.csproj" />
   </ItemGroup>
 
 </Project>
